improve mapWinners behavior

--- a/graphics/break.html
+++ b/graphics/break.html
@@ -10,6 +10,7 @@
     <style>
          :root {
             --lowInkOrange: #F37002;
+            /*low ink orange is F37002 in case i forget*/
             /*NOTE TO SELF: RGB LOW INK WILL BE A THING*/
         }
         
