minor changes to dashboard, update scene switching animation

--- a/graphics/break.html
+++ b/graphics/break.html
@@ -34,9 +34,9 @@
         
         #squidarrows {
             left: 0px;
-            top: 0;
+            bottom: 0px;
             position: absolute;
-            height: 1080px;
+            height: 2160px;
             z-index: -10;
         }
         
@@ -150,7 +150,8 @@
             width: 1920px;
             height: 80px;
             background-color: #111;
-            filter: drop-shadow(0px 5px 0 var(--lowInkOrange));
+            /*filter: drop-shadow(0px 5px 0 var(--lowInkOrange));*/
+            border-bottom: 5px solid var(--lowInkOrange);
             position: absolute;
             left: 0;
             top: -80px;
@@ -442,7 +443,7 @@
     </div>
 
     <div id="squidarrowswrapper">
-        <img src="squidarrows.png" id="squidarrows">
+        <img src="squidarrowsTALL.png" id="squidarrows">
     </div>
 
     <script src="break.js"></script>
