--- a/graphics/break.html
+++ b/graphics/break.html
@@ -56,8 +56,8 @@
             position: absolute;
             right: 150px;
             width: 800px;
-            top: 170px;
-            height: 850px;
+            top: 150px;
+            height: 750px;
             justify-items: center;
             align-items: center;
         }
@@ -371,6 +371,11 @@
             width: 1000px;
             z-index: 0;
         }
+
+        .mainSceneRoundTimer, .mainSceneMusic {
+            height: 0;
+            margin-top: -57px;
+        }
     </style>
 </head>
 
@@ -384,6 +389,14 @@
             <div class="mainSceneFlavorText mainSceneWrapper">
                 <div class="mainSceneBG" id="breakFlavorTextBG">
                     <sc-fitted-text class="breakMainSmallText" id="breakFlavorText" max-width="720" text="OWo"></sc-fitted-text>
+                </div>
+            </div>
+            <div class="mainSceneRoundTimer mainSceneWrapper">
+                <div class="mainSceneIconBG">
+                    <img src="timer.svg" class="mainSceneIcon">
+                </div>
+                <div class="mainSceneBG withIcon" id="mainSceneRoundTimerBG">
+                    <sc-fitted-text class="breakMainSmallText" id="mainSceneRoundTimerText" max-width="720" text="uWu"></sc-fitted-text>
                 </div>
             </div>
             <div class="mainSceneCasterNames mainSceneWrapper">
