--- a/dashboard/scoring.html
+++ b/dashboard/scoring.html
@@ -166,9 +166,9 @@
             <paper-button class="scorePlus" id="teamAPlusB" raised>+</paper-button>
             <paper-button class="scoreMinus" id="teamAMinusB" raised>-</paper-button>
         </div>
-        <paper-input class="counter" value="0" id="teamADisplay" type="number"></paper-input>
+        <paper-input class="counter" value="0" id="teamADisplay" readonly type="number"></paper-input>
         <div style="color: #FFFFFF; font-size: 2.5em;"> : </div>
-        <paper-input class="counter" value="0" id="teamBDisplay" type="number"></paper-input>
+        <paper-input class="counter" value="0" id="teamBDisplay" readonly type="number"></paper-input>
         <div class="layout vertical">
             <paper-button class="scorePlus" id="teamBPlusB" raised>+</paper-button>
             <paper-button class="scoreMinus" id="teamBMinusB" raised>-</paper-button>
