nine maps hahahaha

--- a/dashboard/maplists.html
+++ b/dashboard/maplists.html
@@ -103,6 +103,7 @@
         <paper-button class="create-button" id="create3Map" raised>NEW 3-MAP</paper-button>
         <paper-button class="create-button" id="create5Map" raised>NEW 5-MAP</paper-button>
         <paper-button class="create-button" id="create7Map" raised>NEW 7-MAP</paper-button>
+        <paper-button class="create-button" id="create9Map" raised>NEW 9-MAP</paper-button>
         <paper-button id="removeAll" raised>REMOVE ALL</paper-button>
     </div>
     <div class="mapsGrid" id="mapsGrid">
