--- a/graphics/break.html
+++ b/graphics/break.html
@@ -376,6 +376,14 @@
             height: 0;
             margin-top: -57px;
         }
+
+        .smallStageName {
+            font-size: 1.5em;
+        }
+
+        .smallModeName {
+            font-size: 1.3em;
+        }
     </style>
 </head>
 
