check if maps we're importing actually exist + don't delete existing map lists when importing

--- a/dashboard/maplists.html
+++ b/dashboard/maplists.html
@@ -124,7 +124,7 @@
         <paper-button class="create-button" id="create5Map" raised>NEW 5-MAP</paper-button>
         <paper-button class="create-button" id="create7Map" raised>NEW 7-MAP</paper-button>
         <paper-button id="removeAll" class="removeAll" raised>REMOVE ALL</paper-button>
-        <paper-input label="Import maps" id="mapFileInput"></paper-input>
+        <paper-input label="Import maps from file" id="mapFileInput"></paper-input>
         <paper-button class="removeAll" id="submitFile">submit</paper-button>
         <div class="importStatus"></div>
     </div>
