--- a/dashboard/music.html
+++ b/dashboard/music.html
@@ -1,75 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="import" href="../bower_components/paper-input/paper-input.html">
-    <link rel="import" href="../bower_components/paper-button/paper-button.html">
-    <link rel="import" href="../bower_components/nodecg-toggle/nodecg-toggle.html">
-    <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-    <custom-style>
-		<style include="iron-flex iron-flex-alignment">
-            :root {
-				--blue: #3F51B5;
-				--red: #C9513E;
-				--green: #5BA664;
-			}
-            .title {
-                font-weight: bold;
-                margin-bottom: 5px;
-            }
-            .space {
-                background-color: #262F40;
-                border-radius: 8px;
-                padding: 10px;
-                margin-bottom: 5px;
-            }
-            nodecg-toggle {
-				margin: 0 auto;
-				margin-top: 10px;
-				--paper-toggle-button-label-color: white;
-				--paper-toggle-button-checked-bar-color:  var(--blue);
-   			    --paper-toggle-button-checked-button-color:  var(--blue);
-				--paper-toggle-button-checked-ink-color: var(--blue);
-			}
-            paper-button[disabled] {
-				color: #A9AAA9;
-				background-color: #181E29 !important;
-			}
-            paper-button {
-				margin: 2px;
-				color: #FFFFFF;
-				font-family: 'Roboto', 'Noto', sans-serif;
-				font-weight: normal;
-				font-size: 14px;
-				-webkit-font-smoothing: antialiased;
-				background-color: var(--blue);
-				display: block;
-				text-align: center;
-			}
-            paper-input {
-                --primary-text-color: #FFFFFF;
-                margin-top: -5px;
-                padding: 0px 2px;
-            }
-            .showButton {
-                background-color: var(--green);
-            }
-            .hideButton {
-                background-color: var(--red);
-            }
-            .showHideSpace {
-                display: flex;
-                justify-content: center;
-            }
-        </style>
-    </custom-style>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="globalStyles.css">
+	<style>
+		.selectContainer {
+			margin: 0 2.5px;
+		}
+	</style>
 </head>
 <body>
-    <div class="space showHideSpace layout horizontal">
-        <paper-button raised id="showMusic" class="showButton">Show</paper-button>
-        <paper-button raised id="hideMusic" class="hideButton">Hide</paper-button>
+	<div class="space showHideSpace layout horizontal">
+        <button id="showMusic" class="btnGreen">Show</button>
+        <button id="hideMusic" class="btnRed">Hide</button>
     </div>
     <div class="nowPlayingSpace space">
         <div class="title">Now Playing (Last.fm)</div>
@@ -77,15 +20,21 @@
     </div>
     <div class="space">
         <div class="title">Change song manually</div>
-        <nodecg-toggle replicant-name="mSongEnabled" noink>Manual song input</nodecg-toggle>
-        <div class="layout horizontal">    
-            <paper-input label="Song Artist" id="artistInput"></paper-input>
-            <paper-input label="Song Name" id="songInput"></paper-input>
+        <input type="checkbox" id="checkManualSong" onchange="setReplicant('mSongEnabled', event)">Manual song input</input>
+        <div class="showHideSpace">
+            <div class="selectContainer">
+                <div class="inputLabel">Song Artist</div>
+                <input type="text" id="artistInput"></input>
+            </div>
+            <div class="selectContainer">
+                <div class="inputLabel">Song Name</div>
+                <input type="text" id="songInput"></input>
+            </div>
         </div>
-        <paper-button raised id="updateManual">Update</paper-button>
-    </div>
-
-    <script src="music.js"></script>
-    <script src="../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+        <button id="updateManual" class="maxWidthButton">Update</button>
+	</div>
+	
+	<script src="globalScripts.js"></script>
+	<script src="music.js"></script>
 </body>
 </html>
