fix time zone labels on break schedule

--- a/graphics/break.html
+++ b/graphics/break.html
@@ -447,8 +447,9 @@
             font-family: "Montserrat";
             position: absolute;
             top: 235px;
-            margin-left: 900px;
+            right: 370px;
             font-size: 0.75em;
+            text-align: center;
         }
     </style>
 </head>
