post tourney updates: rgb mode re-added, we set round start times instead of end times

--- a/dashboard/breakscreen.html
+++ b/dashboard/breakscreen.html
@@ -118,6 +118,12 @@
 				</div>
 				<button id="updateMaps" class="maxWidthButton">Update</button>
 			</div>
+
+			<div class="space">
+				<div class="toggleContainer">
+					<input type="checkbox" id="checkSetRGB" onchange="setReplicant('RGBMode', event)">RGB Mode</input>
+				</div>
+			</div>
 		</div>
 		
 		<div class="col">
@@ -157,7 +163,7 @@
 					<button class="btnGreen" id="scRoundPlus">+</button>
 				</div>
 
-				<div class="title">Round end time</div>
+				<div class="title">Round start time</div>
 				<div class="timerContainer">
 					<div class="timerContainerNum">
 						<div class="inputLabel">Hour</div>
