--- a/dashboard/breakscreen.html
+++ b/dashboard/breakscreen.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!--
+	All rights reserved, reuse not permitted.
+	-->
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="globalStyles.css">
 	<style>
@@ -125,7 +128,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="col">
 			<div class="space">
 				<div class="title">Next Teams</div>
