--- a/dashboard/tourneyImport.html
+++ b/dashboard/tourneyImport.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <!--
+	All rights reserved, reuse not permitted.
+	-->
     <meta charset="UTF-8">
     <link rel="stylesheet" href="globalStyles.css">
     <style>
@@ -11,7 +14,7 @@
             --green: #5BA664;
             --yellow: #FDD835;
         }
-        
+
         div.statusDisplay {
             background-color: #181E29;
             display: block;
@@ -21,7 +24,7 @@
             border-radius: 2px;
             padding: 5px 0px;
         }
-        
+
         .space {
             background-color: #262F40;
             border-radius: 8px;
