Update license jargon

--- a/dashboard/scoring.html
+++ b/dashboard/scoring.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<!--
-	All rights reserved, reuse not permitted.
+	Dashboard HTML layouts are licensed under the MIT license.
 	-->
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
