--- a/dashboard/mapWinners.html
+++ b/dashboard/mapWinners.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<!--
-	All rights reserved, reuse not permitted.
+	Dashboard HTML layouts are licensed under the MIT license.
 	-->
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="globalStyles.css">
