--- a/graphics/break.html
+++ b/graphics/break.html
@@ -6,9 +6,6 @@
 	   All rights reserved, reuse not permitted.
 	  -->
     <meta charset="UTF-8">
-    <script src="../node_modules/gsap/dist/gsap.js"></script>
-    <script src="../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../bower_components/sc-fitted-text/sc-fitted-text.html">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700,600|Work+Sans:400&display=swap" rel="stylesheet">
     <style>
          :root {
@@ -153,7 +150,7 @@
 
         #topBar {
             display: grid;
-            grid-template-columns: 1fr 15fr;
+            grid-template-columns: 1fr 8fr 8fr 1fr;
             align-content: center;
             align-items: center;
             width: 1920px;
@@ -186,6 +183,7 @@
             font-weight: 700;
             position: absolute;
             right: 100px;
+            justify-self: end;
         }
 
         #topBarInfoIcon {
@@ -466,7 +464,7 @@
             </div>
             <div class="mainSceneFlavorText mainSceneWrapper">
                 <div class="mainSceneBG" id="breakFlavorTextBG">
-                    <sc-fitted-text class="breakMainSmallText" id="breakFlavorText" max-width="720" text="OWo"></sc-fitted-text>
+                    <fitted-text class="breakMainSmallText" id="breakFlavorText" max-width="720" text="OWo"></fitted-text>
                 </div>
             </div>
             <div class="mainSceneRoundTimer mainSceneWrapper">
@@ -474,7 +472,7 @@
                     <img src="icons/timer.svg" class="mainSceneIcon">
                 </div>
                 <div class="mainSceneBG withIcon" id="mainSceneRoundTimerBG">
-                    <sc-fitted-text class="breakMainSmallText" id="mainSceneRoundTimerText" max-width="720" text="uWu"></sc-fitted-text>
+                    <fitted-text class="breakMainSmallText" id="mainSceneRoundTimerText" max-width="720" text="uWu"></fitted-text>
                 </div>
             </div>
             <div class="mainSceneCasterNames mainSceneWrapper">
@@ -482,7 +480,7 @@
                     <img src="icons/microphone.svg" class="mainSceneIcon">
                 </div>
                 <div class="mainSceneBG withIcon" id="breakCasterNamesBG">
-                    <sc-fitted-text class="breakMainSmallText" id="breakCasterNames" max-width="720" text="uWu"></sc-fitted-text>
+                    <fitted-text class="breakMainSmallText" id="breakCasterNames" max-width="720" text="uWu"></fitted-text>
                 </div>
             </div>
             <div class="mainSceneSupport mainSceneWrapper">
@@ -490,7 +488,7 @@
                     <img src="icons/logoTwitter.png" class="mainSceneIconRaster" id="socialIcon">
                 </div>
                 <div class="mainSceneBG withIcon" id="breakSupportBG">
-                    <sc-fitted-text class="breakMainSmallText" id="breakSupport" max-width="720" text="uWu"></sc-fitted-text>
+                    <fitted-text class="breakMainSmallText" id="breakSupport" max-width="720" text="uWu"></fitted-text>
                 </div>
             </div>
             <div class="mainSceneMusic mainSceneWrapper" id="musicWrapper">
@@ -498,7 +496,7 @@
                     <img src="icons/music.svg" class="mainSceneIcon">
                 </div>
                 <div class="mainSceneBG withIcon" id="breakSongTextBG">
-                    <sc-fitted-text class="breakMainSmallText" id="breakSongText" max-width="720" text="AwA"></sc-fitted-text>
+                    <fitted-text class="breakMainSmallText" id="breakSongText" max-width="720" text="AwA"></fitted-text>
                 </div>
             </div>
         </div>
@@ -506,8 +504,8 @@
 
     <div id="topBar">
         <img class="smallIcon" src="Inkgaugelogo-li-coolbg-notext.png">
-        <sc-fitted-text id="topBarText" align="left" max-width="840"></sc-fitted-text>
-        <sc-fitted-text id="topBarInfoText" text="OwO" align="right" max-width="840"></sc-fitted-text>
+        <fitted-text id="topBarText" align="left" max-width="840"></fitted-text>
+        <fitted-text id="topBarInfoText" text="OwO" align="right" max-width="840"></fitted-text>
         <img id="topBarInfoIcon" src="icons/microphone.svg">
     </div>
 
@@ -515,14 +513,14 @@
         <div class="sceneTitle nextUpTitle">NEXT UP</div>
         <div id="teamAInfo" class="teamInfo">
             <div class="teamImage" id="teamAImage"></div>
-            <sc-fitted-text class="teamName" id="teamAName" text="WHOa GAMERS!!!" max-width="450" align="right"></sc-fitted-text>
+            <fitted-text class="teamName" id="teamAName" text="WHOa GAMERS!!!" max-width="450" align="right"></fitted-text>
         </div>
 
         <div class="versus">VS</div>
 
         <div id="teamBInfo" class="teamInfo">
             <div class="teamImage" id="teamBImage"></div>
-            <sc-fitted-text class="teamName" id="teamBName" text="WHOa GAMERS!!!" max-width="450" align="left"></sc-fitted-text>
+            <fitted-text class="teamName" id="teamBName" text="WHOa GAMERS!!!" max-width="450" align="left"></fitted-text>
         </div>
     </div>
 
@@ -550,6 +548,8 @@
         <img src="squidarrowsTALL.png" id="squidarrows">
     </div>
 
+    <script src="fitted-text.js"></script>
+    <script src="../node_modules/gsap/dist/gsap.js"></script>
     <script src="break.js"></script>
 </body>
 
