--- a/graphics/main.html
+++ b/graphics/main.html
@@ -6,7 +6,7 @@
 	   All rights reserved, reuse not permitted.
 	  -->
     <meta charset="UTF-8"
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700,600" rel="stylesheet">
     <style>
          :root {
             --lowInkOrange: #F37002;
@@ -123,6 +123,7 @@
             position: relative;
             top: 0;
             left: 0;
+            font-weight: 600;
         }
     </style>
 </head>
