team images can be hidden from break screen

--- a/dashboard/breakscreen.html
+++ b/dashboard/breakscreen.html
@@ -139,10 +139,12 @@
 					<div class="selectContainer">
 						<div class="inputLabel">Next Team A</div>
 						<select id="nextTeamASelect" class="teamSelector"></select>
+						<input type="checkbox" id="checkSetTeamAImg" onchange="setReplicant('teamAImgShown', event)">Show image</input>
 					</div>
 					<div class="selectContainer">
 						<div class="inputLabel">Next Team B</div>
 						<select id="nextTeamBSelect" class="teamSelector"></select>
+						<input type="checkbox" id="checkSetTeamBImg" onchange="setReplicant('teamBImgShown', event)">Show image</input>
 					</div>
 				</div>
 				<button id="nextTeamUpdateBtn" class="btnBlue maxWidthButton">update</button>
