Last changes before rewrite

--- a/graphics/main.html
+++ b/graphics/main.html
@@ -6,6 +6,7 @@
 	   All rights reserved, reuse not permitted.
 	  -->
     <meta charset="UTF-8"
+    <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700,600" rel="stylesheet">
     <style>
          :root {
@@ -13,7 +14,7 @@
         }
 
         body {
-            font-family: 'Montserrat';
+            font-family: 'Montserrat', 'Kosugi Maru', sans-serif;
             font-weight: 700;
         }
 
@@ -124,6 +125,10 @@
             top: 0;
             left: 0;
             font-weight: 600;
+        }
+
+        div.teamInfo {
+            height: 35px;
         }
     </style>
 </head>
